<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SampleFragmentStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/voice_volume_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/voice_volume_hint"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/voice_power_bar"
        style="@style/VoiceVolumeStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/voice_volume_hint"
        android:max="100"
        android:progress="0" />

    <TextView
        android:id="@+id/result_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/voice_power_bar"
        android:layout_marginTop="@dimen/element_vertical_margin"
        android:text="@string/results_hint"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/result_hint" />

    <TextView
        android:id="@+id/current_language_hint"
        style="@style/CurrentStateHintStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/result"
        android:layout_marginTop="@dimen/element_vertical_margin"
        android:text="@string/current_lang_hint_label" />

    <TextView
        android:id="@+id/language_text"
        style="@style/CurrentStateTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/result"
        android:layout_marginTop="@dimen/element_vertical_margin"
        android:layout_toEndOf="@id/current_language_hint"/>

    <TextView
        android:id="@+id/recognition_state_hint"
        style="@style/CurrentStateHintStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/current_language_hint"
        android:text="@string/current_recognition_hint_label" />

    <TextView
        android:id="@+id/recognition_state_text"
        style="@style/CurrentStateTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/current_language_hint"
        android:layout_toEndOf="@id/recognition_state_hint" />

    <TextView
        android:id="@+id/spotter_state_hint"
        style="@style/CurrentStateHintStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recognition_state_hint"
        android:text="@string/current_spotter_hint_label" />

    <TextView
        android:id="@+id/spotter_state_text"
        style="@style/CurrentStateTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recognition_state_hint"
        android:layout_toEndOf="@id/spotter_state_hint" />

    <TextView
        android:id="@+id/phrase_spotter_model_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spotter_state_hint"
        android:layout_marginTop="@dimen/element_vertical_margin"
        android:text="@string/model_mail_description" />

    <LinearLayout
        android:id="@+id/btn_holder"
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/phrase_spotter_model_desc">

        <Button
            android:id="@+id/cancel_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_btn" />

        <Button
            android:id="@+id/start_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_btn" />
    </LinearLayout>


</RelativeLayout>
